# dateless

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
examples/: json.rs  weekly.rs
hooks/: pre-commit
src/: calendar.rs  chrono.rs  lib.rs  prelude.rs  serde.rs  test.rs
src/codegen/: mod.rs
src/event/: cyclicity.rs  mod.rs  occurance.rs  occurrence.rs  period.rs
src/event/cyclicity/: annual.rs  daily.rs  mod.rs  monthly.rs  weekly.rs
src/event/period/: mod.rs  start_end.rs  whole_days.rs
