[package]
name = "dateless"
version = "0.2.3"
authors = ["v1olen <v1olen@v-sn.io>"]
edition = "2018"
description = "Events & calendar library for Rust"
license = "Apache-2.0"
repository = "https://gitlab.com/v1olen/dateless"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
optfield = "0.2.0"
serde = { optional = true, version = "1.0.125", features = ["derive"] }
typetag = { optional = true, version = "0.1.7" }

[target.'cfg(feature = "serde_support")'.dependencies]
chrono  = { optional = true, version = "0.4.19", features = ["serde"] }

[features]
default = ["serde_support"]

serde_support = ["serde", "chrono", "typetag"]

[dev-dependencies]
serde_json = "1.0.64"
